force-app/main/default/objects/HCP_Referral__c/HCP_Referral__c.object-meta.xml
<CustomObject>
    <label>HCP Referral</label>
    <nameField>
        <displayFormat>HREF{0000}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCP Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>