force-app/main/default/objects/HCP_Referral__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>HCP Referrals</relationshipLabel>
    <relationshipName>HCP_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>