force-app/main/default/objects/HCP_Referral__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason for Referral</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>