force-app/main/default/objects/HCP_Referral__c/fields/Referred_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referred_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>HCP Referrals</relationshipLabel>
    <relationshipName>HCP_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>