force-app/main/default/objects/HCP_Referral__c/fields/Referred_To_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Referred_To_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred To Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>HCP Referrals</relationshipLabel>
    <relationshipName>HCP_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>