force-app/main/default/objects/HCP_Referral__c/fields/Referring_Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Referring_Doctor_Name__c</fullName>
    <label>Referring Doctor / HCP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>