force-app/main/default/objects/HCP_Referral__c/fields/Referring_HCP__c.field-meta.xml
<CustomField>
    <fullName>Referring_HCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring HCP / Clinic</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HCP Referrals</relationshipLabel>
    <relationshipName>HCP_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>