force-app/main/default/objects/HCP_Referral__c/fields/Visit_Logged_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Logged_Date__c</fullName>
    <label>Visit Logged Date</label>
    <type>Date</type>
</CustomField>