force-app/main/default/objects/HCP_Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Referring_Doctor_Name__c</columns>
    <columns>Referred_To_Doctor__c</columns>
    <columns>Specialization__c</columns>
    <columns>Patient__c</columns>
    <columns>Referral_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>